# findingfold

./: .gitignore  README.md  pyproject.toml
docs/: ci-integration.md  custom-rules.md  export-findings.md  how-it-works.md
findingfold/: __init__.py  cli.py  enrich.py  fold.py  fp_filter.py  ingest.py  mcp_server.py  reporter.py  scorer.py
findingfold.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
findingfold/rules/: __init__.py  ami.py  cloudformation.py  iac_tag.py  iam_policy.py  security_group.py  title_fingerprint.py
findingfold/sources/: json_file.py  sarif.py  security_hub.py
tests/: test_fold.py  test_fp_filter.py  test_rules.py  test_scorer.py
tests/fixtures/: sample_findings.json  sample_sarif.json
